[gd_scene load_steps=35 format=3 uid="uid://c78a1jfo7knpf"]

[ext_resource type="Script" path="res://Scripts/Brewing/Cauldron.gd" id="1_4rxum"]
[ext_resource type="PackedScene" uid="uid://dhv6t6e3rrxc2" path="res://Models/Environment/Cauldron.blend" id="1_vhr3y"]
[ext_resource type="Shader" path="res://Shader/CauldronPotion.gdshader" id="3_ji1km"]
[ext_resource type="Texture2D" uid="uid://both4o3c0t4e1" path="res://Textures/Brewing/PotionNoise.png" id="4_kvknu"]
[ext_resource type="Texture2D" uid="uid://d08hyvia0w3td" path="res://Textures/Particles/CouldronFire.png" id="4_m4ul7"]
[ext_resource type="PackedScene" uid="uid://b1m3kqhs6gx7" path="res://Models/Log.blend" id="5_encwd"]
[ext_resource type="Texture2D" uid="uid://b8ptpbc0bxmye" path="res://Textures/Fruits/Blubburu/Blubburu.png" id="6_r7pt7"]
[ext_resource type="Script" path="res://Scripts/ParticleCombiner.gd" id="7_6rd3o"]
[ext_resource type="Script" path="res://Scripts/Lever.gd" id="9_8d6wc"]
[ext_resource type="Script" path="res://addons/godot-xr-tools/objects/pickable.gd" id="10_f8ijn"]
[ext_resource type="Script" path="res://addons/godot-xr-tools/objects/highlight/highlight_visible.gd" id="11_d68hx"]
[ext_resource type="Material" uid="uid://cq1x3i8pni2ak" path="res://Materials/Highlight.tres" id="12_0hfjq"]
[ext_resource type="PackedScene" uid="uid://b30eqouqhr2gd" path="res://Prefabs/Brewing/FlaskSpawner.tscn" id="13_4jxc5"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_gr0cy"]
data = PackedVector3Array(0.1274, 0.3273, 0.0736, -0.0002, 0.3032, 0.1525, 0.1319, 0.3032, 0.0762, 0.1274, 0.3273, 0.0736, -0.0002, 0.3273, 0.1473, -0.0002, 0.3032, 0.1525, -0.0002, 0.3273, -0.1473, 0.1319, 0.3032, -0.0763, -0.0002, 0.3032, -0.1525, -0.0002, 0.3273, -0.1473, 0.1274, 0.3273, -0.0736, 0.1319, 0.3032, -0.0763, 0.1606, 0.312, -0.0928, -0.0002, 0.3397, -0.1764, -0.0002, 0.312, -0.1856, 0.1606, 0.312, -0.0928, 0.1526, 0.3397, -0.0882, -0.0002, 0.3397, -0.1764, 0.1274, 0.3273, 0.0736, 0.1319, 0.3032, -0.0763, 0.1274, 0.3273, -0.0736, 0.1274, 0.3273, 0.0736, 0.1319, 0.3032, 0.0762, 0.1319, 0.3032, -0.0763, -0.1277, 0.3273, 0.0736, -0.1322, 0.3032, -0.0763, -0.1322, 0.3032, 0.0762, -0.1277, 0.3273, 0.0736, -0.1277, 0.3273, -0.0736, -0.1322, 0.3032, -0.0763, -0.0002, 0.312, -0.1856, -0.1529, 0.3397, -0.0882, -0.1609, 0.312, -0.0928, -0.0002, 0.312, -0.1856, -0.0002, 0.3397, -0.1764, -0.1529, 0.3397, -0.0882, -0.0002, 0.312, 0.1856, -0.1486, 0.3032, 0.0857, -0.1609, 0.312, 0.0928, -0.0002, 0.312, 0.1856, -0.0002, 0.3032, 0.1714, -0.1486, 0.3032, 0.0857, -0.1609, 0.312, -0.0928, -0.1529, 0.3397, 0.0882, -0.1609, 0.312, 0.0928, -0.1609, 0.312, -0.0928, -0.1529, 0.3397, -0.0882, -0.1529, 0.3397, 0.0882, 0.1274, 0.3273, -0.0736, 0.1526, 0.3397, 0.0882, 0.1274, 0.3273, 0.0736, 0.1274, 0.3273, -0.0736, 0.1526, 0.3397, -0.0882, 0.1526, 0.3397, 0.0882, -0.1609, 0.312, 0.0928, -0.0002, 0.3397, 0.1764, -0.0002, 0.312, 0.1856, -0.1609, 0.312, 0.0928, -0.1529, 0.3397, 0.0882, -0.0002, 0.3397, 0.1764, -0.1529, 0.3397, -0.0882, -0.0002, 0.3273, -0.1473, -0.1277, 0.3273, -0.0736, -0.1529, 0.3397, -0.0882, -0.0002, 0.3397, -0.1764, -0.0002, 0.3273, -0.1473, -0.1529, 0.3397, 0.0882, -0.1277, 0.3273, -0.0736, -0.1277, 0.3273, 0.0736, -0.1529, 0.3397, 0.0882, -0.1529, 0.3397, -0.0882, -0.1277, 0.3273, -0.0736, -0.1277, 0.3273, -0.0736, -0.0002, 0.3032, -0.1525, -0.1322, 0.3032, -0.0763, -0.1277, 0.3273, -0.0736, -0.0002, 0.3273, -0.1473, -0.0002, 0.3032, -0.1525, -0.0002, 0.312, 0.1856, 0.1526, 0.3397, 0.0882, 0.1606, 0.312, 0.0928, -0.0002, 0.312, 0.1856, -0.0002, 0.3397, 0.1764, 0.1526, 0.3397, 0.0882, 0.1606, 0.312, -0.0928, 0.1482, 0.3032, 0.0857, 0.1606, 0.312, 0.0928, 0.1606, 0.312, -0.0928, 0.1482, 0.3032, -0.0857, 0.1482, 0.3032, 0.0857, 0.1606, 0.312, 0.0928, 0.1526, 0.3397, -0.0882, 0.1606, 0.312, -0.0928, 0.1606, 0.312, 0.0928, 0.1526, 0.3397, 0.0882, 0.1526, 0.3397, -0.0882, -0.0002, 0.3032, -0.1714, 0.1825, 0.2574, -0.1055, 0.1482, 0.3032, -0.0857, -0.0002, 0.3032, -0.1714, -0.0002, 0.2574, -0.2109, 0.1825, 0.2574, -0.1055, 0.1319, 0.3032, -0.0763, 0.1752, 0.1864, 0.1012, 0.1752, 0.1864, -0.1012, 0.1319, 0.3032, -0.0763, 0.1319, 0.3032, 0.0762, 0.1752, 0.1864, 0.1012, -0.1322, 0.3032, 0.0762, -0.1755, 0.1864, -0.1012, -0.1755, 0.1864, 0.1012, -0.1322, 0.3032, 0.0762, -0.1322, 0.3032, -0.0763, -0.1755, 0.1864, -0.1012, 0.1319, 0.3032, 0.0762, -0.0002, 0.1864, 0.2025, 0.1752, 0.1864, 0.1012, 0.1319, 0.3032, 0.0762, -0.0002, 0.3032, 0.1525, -0.0002, 0.1864, 0.2025, 0.1482, 0.3032, 0.0857, -0.0002, 0.2574, 0.2109, -0.0002, 0.3032, 0.1714, 0.1482, 0.3032, 0.0857, 0.1825, 0.2574, 0.1055, -0.0002, 0.2574, 0.2109, -0.0002, 0.312, -0.1856, 0.1482, 0.3032, -0.0857, 0.1606, 0.312, -0.0928, -0.0002, 0.312, -0.1856, -0.0002, 0.3032, -0.1714, 0.1482, 0.3032, -0.0857, -0.1609, 0.312, -0.0928, -0.0002, 0.3032, -0.1714, -0.0002, 0.312, -0.1856, -0.1609, 0.312, -0.0928, -0.1486, 0.3032, -0.0857, -0.0002, 0.3032, -0.1714, 0.1606, 0.312, 0.0928, -0.0002, 0.3032, 0.1714, -0.0002, 0.312, 0.1856, 0.1606, 0.312, 0.0928, 0.1482, 0.3032, 0.0857, -0.0002, 0.3032, 0.1714, -0.1609, 0.312, 0.0928, -0.1486, 0.3032, -0.0857, -0.1609, 0.312, -0.0928, -0.1609, 0.312, 0.0928, -0.1486, 0.3032, 0.0857, -0.1486, 0.3032, -0.0857, 0.1825, 0.2574, -0.1055, -0.0002, 0.1403, -0.2412, 0.2087, 0.1403, -0.1206, 0.1825, 0.2574, -0.1055, -0.0002, 0.2574, -0.2109, -0.0002, 0.1403, -0.2412, -0.0002, 0.1864, -0.2025, 0.0785, 0.065, -0.0454, -0.0002, 0.065, -0.0908, -0.0002, 0.1864, -0.2025, 0.1752, 0.1864, -0.1012, 0.0785, 0.065, -0.0454, -0.0002, 0.2574, 0.2109, 0.2087, 0.1403, 0.1206, -0.0002, 0.1403, 0.2412, -0.0002, 0.2574, 0.2109, 0.1825, 0.2574, 0.1055, 0.2087, 0.1403, 0.1206, 0.1482, 0.3032, -0.0857, 0.1825, 0.2574, 0.1055, 0.1482, 0.3032, 0.0857, 0.1482, 0.3032, -0.0857, 0.1825, 0.2574, -0.1055, 0.1825, 0.2574, 0.1055, -0.0002, 0.3032, -0.1525, 0.1752, 0.1864, -0.1012, -0.0002, 0.1864, -0.2025, -0.0002, 0.3032, -0.1525, 0.1319, 0.3032, -0.0763, 0.1752, 0.1864, -0.1012, -0.1486, 0.3032, -0.0857, -0.0002, 0.2574, -0.2109, -0.0002, 0.3032, -0.1714, -0.1486, 0.3032, -0.0857, -0.1828, 0.2574, -0.1055, -0.0002, 0.2574, -0.2109, -0.1322, 0.3032, -0.0763, -0.0002, 0.1864, -0.2025, -0.1755, 0.1864, -0.1012, -0.1322, 0.3032, -0.0763, -0.0002, 0.3032, -0.1525, -0.0002, 0.1864, -0.2025, -0.1828, 0.2574, -0.1055, -0.209, 0.1403, 0.1206, -0.209, 0.1403, -0.1206, -0.1828, 0.2574, -0.1055, -0.1828, 0.2574, 0.1055, -0.209, 0.1403, 0.1206, -0.0002, 0.3032, 0.1714, -0.1828, 0.2574, 0.1055, -0.1486, 0.3032, 0.0857, -0.0002, 0.3032, 0.1714, -0.0002, 0.2574, 0.2109, -0.1828, 0.2574, 0.1055, 0.1825, 0.2574, 0.1055, 0.2087, 0.1403, -0.1206, 0.2087, 0.1403, 0.1206, 0.1825, 0.2574, 0.1055, 0.1825, 0.2574, -0.1055, 0.2087, 0.1403, -0.1206, -0.0002, 0.2574, -0.2109, -0.209, 0.1403, -0.1206, -0.0002, 0.1403, -0.2412, -0.0002, 0.2574, -0.2109, -0.1828, 0.2574, -0.1055, -0.209, 0.1403, -0.1206, -0.1828, 0.2574, 0.1055, -0.0002, 0.1403, 0.2412, -0.209, 0.1403, 0.1206, -0.1828, 0.2574, 0.1055, -0.0002, 0.2574, 0.2109, -0.0002, 0.1403, 0.2412, -0.0002, 0.065, -0.0908, -0.0788, 0.065, 0.0454, -0.0788, 0.065, -0.0454, -0.0788, 0.065, 0.0454, 0.0785, 0.065, 0.0454, -0.0002, 0.065, 0.0908, 0.0785, 0.065, 0.0454, -0.0002, 0.065, -0.0908, 0.0785, 0.065, -0.0454, -0.0788, 0.065, 0.0454, -0.0002, 0.065, -0.0908, 0.0785, 0.065, 0.0454, 0.1752, 0.1864, -0.1012, 0.0785, 0.065, 0.0454, 0.0785, 0.065, -0.0454, 0.1752, 0.1864, -0.1012, 0.1752, 0.1864, 0.1012, 0.0785, 0.065, 0.0454, 0.1752, 0.1864, 0.1012, -0.0002, 0.065, 0.0908, 0.0785, 0.065, 0.0454, 0.1752, 0.1864, 0.1012, -0.0002, 0.1864, 0.2025, -0.0002, 0.065, 0.0908, -0.209, 0.1403, -0.1206, -0.1713, 0.0826, 0.0988, -0.1713, 0.0826, -0.0988, -0.209, 0.1403, -0.1206, -0.209, 0.1403, 0.1206, -0.1713, 0.0826, 0.0988, -0.0002, 0.1403, 0.2412, 0.171, 0.0826, 0.0988, -0.0002, 0.0826, 0.1976, -0.0002, 0.1403, 0.2412, 0.2087, 0.1403, 0.1206, 0.171, 0.0826, 0.0988, -0.1755, 0.1864, 0.1012, -0.0788, 0.065, -0.0454, -0.0788, 0.065, 0.0454, -0.1755, 0.1864, 0.1012, -0.1755, 0.1864, -0.1012, -0.0788, 0.065, -0.0454, -0.209, 0.1403, 0.1206, -0.0002, 0.0826, 0.1976, -0.1713, 0.0826, 0.0988, -0.209, 0.1403, 0.1206, -0.0002, 0.1403, 0.2412, -0.0002, 0.0826, 0.1976, 0.171, 0.0826, -0.0988, -0.0002, 0.1403, -0.2412, -0.0002, 0.0826, -0.1976, 0.171, 0.0826, -0.0988, 0.2087, 0.1403, -0.1206, -0.0002, 0.1403, -0.2412, 0.2087, 0.1403, -0.1206, 0.171, 0.0826, 0.0988, 0.2087, 0.1403, 0.1206, 0.2087, 0.1403, -0.1206, 0.171, 0.0826, -0.0988, 0.171, 0.0826, 0.0988, -0.0002, 0.1403, -0.2412, -0.1713, 0.0826, -0.0988, -0.0002, 0.0826, -0.1976, -0.0002, 0.1403, -0.2412, -0.209, 0.1403, -0.1206, -0.1713, 0.0826, -0.0988, -0.1755, 0.1864, -0.1012, -0.0002, 0.065, -0.0908, -0.0788, 0.065, -0.0454, -0.1755, 0.1864, -0.1012, -0.0002, 0.1864, -0.2025, -0.0002, 0.065, -0.0908, -0.1713, 0.0826, -0.0988, -0.0002, 0.0535, -0.1158, -0.0002, 0.0826, -0.1976, -0.1713, 0.0826, -0.0988, -0.1004, 0.0535, -0.0579, -0.0002, 0.0535, -0.1158, 0.171, 0.0826, -0.0988, 0.1001, 0.0535, 0.0579, 0.171, 0.0826, 0.0988, 0.171, 0.0826, -0.0988, 0.1001, 0.0535, -0.0579, 0.1001, 0.0535, 0.0579, -0.0002, 0.0826, -0.1976, 0.1001, 0.0535, -0.0579, 0.171, 0.0826, -0.0988, -0.0002, 0.0826, -0.1976, -0.0002, 0.0535, -0.1158, 0.1001, 0.0535, -0.0579, 0.0785, 0.065, -0.0454, -0.0002, 0.0535, -0.1158, -0.0002, 0.065, -0.0908, 0.0785, 0.065, -0.0454, 0.1001, 0.0535, -0.0579, -0.0002, 0.0535, -0.1158, -0.0002, 0.065, -0.0908, -0.1004, 0.0535, -0.0579, -0.0788, 0.065, -0.0454, -0.0002, 0.065, -0.0908, -0.0002, 0.0535, -0.1158, -0.1004, 0.0535, -0.0579, -0.0788, 0.065, -0.0454, -0.1004, 0.0535, 0.0579, -0.0788, 0.065, 0.0454, -0.0788, 0.065, -0.0454, -0.1004, 0.0535, -0.0579, -0.1004, 0.0535, 0.0579, -0.0788, 0.065, 0.0454, -0.0002, 0.0535, 0.1158, -0.0002, 0.065, 0.0908, -0.0788, 0.065, 0.0454, -0.1004, 0.0535, 0.0579, -0.0002, 0.0535, 0.1158, -0.0002, 0.065, 0.0908, 0.1001, 0.0535, 0.0579, 0.0785, 0.065, 0.0454, -0.0002, 0.065, 0.0908, -0.0002, 0.0535, 0.1158, 0.1001, 0.0535, 0.0579, 0.0785, 0.065, 0.0454, 0.1001, 0.0535, -0.0579, 0.0785, 0.065, -0.0454, 0.0785, 0.065, 0.0454, 0.1001, 0.0535, 0.0579, 0.1001, 0.0535, -0.0579, -0.0002, 0.0826, 0.1976, -0.1004, 0.0535, 0.0579, -0.1713, 0.0826, 0.0988, -0.0002, 0.0826, 0.1976, -0.0002, 0.0535, 0.1158, -0.1004, 0.0535, 0.0579, 0.171, 0.0826, 0.0988, -0.0002, 0.0535, 0.1158, -0.0002, 0.0826, 0.1976, 0.171, 0.0826, 0.0988, 0.1001, 0.0535, 0.0579, -0.0002, 0.0535, 0.1158, -0.1713, 0.0826, 0.0988, -0.1004, 0.0535, -0.0579, -0.1713, 0.0826, -0.0988, -0.1713, 0.0826, 0.0988, -0.1004, 0.0535, 0.0579, -0.1004, 0.0535, -0.0579, -0.0002, 0.3273, 0.1473, -0.1529, 0.3397, 0.0882, -0.1277, 0.3273, 0.0736, -0.0002, 0.3273, 0.1473, -0.0002, 0.3397, 0.1764, -0.1529, 0.3397, 0.0882, -0.0002, 0.3273, 0.1473, 0.1526, 0.3397, 0.0882, -0.0002, 0.3397, 0.1764, -0.0002, 0.3273, 0.1473, 0.1274, 0.3273, 0.0736, 0.1526, 0.3397, 0.0882, -0.0002, 0.3397, -0.1764, 0.1274, 0.3273, -0.0736, -0.0002, 0.3273, -0.1473, -0.0002, 0.3397, -0.1764, 0.1526, 0.3397, -0.0882, 0.1274, 0.3273, -0.0736, -0.0002, 0.3032, 0.1525, -0.1755, 0.1864, 0.1012, -0.0002, 0.1864, 0.2025, -0.0002, 0.3032, 0.1525, -0.1322, 0.3032, 0.0762, -0.1755, 0.1864, 0.1012, -0.1277, 0.3273, 0.0736, -0.0002, 0.3032, 0.1525, -0.0002, 0.3273, 0.1473, -0.1277, 0.3273, 0.0736, -0.1322, 0.3032, 0.0762, -0.0002, 0.3032, 0.1525, -0.0002, 0.1864, 0.2025, -0.0788, 0.065, 0.0454, -0.0002, 0.065, 0.0908, -0.0002, 0.1864, 0.2025, -0.1755, 0.1864, 0.1012, -0.0788, 0.065, 0.0454, -0.1486, 0.3032, -0.0857, -0.1828, 0.2574, 0.1055, -0.1828, 0.2574, -0.1055, -0.1486, 0.3032, -0.0857, -0.1486, 0.3032, 0.0857, -0.1828, 0.2574, 0.1055)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p5c1o"]
render_priority = 0
shader = ExtResource("3_ji1km")
shader_parameter/base_color = Color(0.933333, 0, 0.188235, 1)
shader_parameter/alpha = 0.0
shader_parameter/mix_amount = 1.8
shader_parameter/potion_noise = ExtResource("4_kvknu")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y2s61"]
resource_name = "Leaves.001"
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
cull_mode = 2
albedo_texture = ExtResource("6_r7pt7")
texture_filter = 0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_hyasg"]
height = 0.1
radius = 0.13

[sub_resource type="Curve" id="Curve_fewjo"]
_data = [Vector2(1e-05, 0), 0.0, 0.0, 0, 0, Vector2(0.257143, 0.990525), 0.0, 0.0, 0, 0, Vector2(0.99999, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_7e3np"]
curve = SubResource("Curve_fewjo")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4upeb"]
emission_shape_scale = Vector3(1, 0, 1)
emission_shape = 1
emission_sphere_radius = 0.15
angular_velocity_min = 180.0
angular_velocity_max = 180.0
radial_velocity_min = 0.01
radial_velocity_max = 0.03
gravity = Vector3(0, 0.01, 0)
scale_curve = SubResource("CurveTexture_7e3np")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wuelf"]
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
shading_mode = 0
albedo_color = Color(100, 1, 1, 1)
albedo_texture = ExtResource("4_m4ul7")
texture_filter = 0
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_0idgw"]
material = SubResource("StandardMaterial3D_wuelf")
size = Vector2(0.025, 0.025)

[sub_resource type="Curve" id="Curve_idskj"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.263473, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -0.0251408, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_fa2pi"]
curve = SubResource("Curve_idskj")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5uriq"]
emission_shape = 1
emission_sphere_radius = 0.02
direction = Vector3(0, 1, 0)
spread = 90.0
angular_velocity_min = -90.0
angular_velocity_max = 90.0
radial_velocity_min = 0.01
radial_velocity_max = 0.03
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_fa2pi")
turbulence_enabled = true
turbulence_influence_min = 0.0
turbulence_influence_max = 0.015

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yk5p5"]
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
shading_mode = 0
albedo_color = Color(1.77647, 0.745098, 0.247059, 1)
texture_filter = 0
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_j6bkw"]
material = SubResource("StandardMaterial3D_yk5p5")
size = Vector2(0.008, 0.008)

[sub_resource type="Curve" id="Curve_qi1j8"]
_data = [Vector2(0, 0.522697), 0.0, 0.0, 0, 0, Vector2(0.262458, 1), 0.0, 0.0, 0, 0, Vector2(0.757475, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_45o4p"]
curve = SubResource("Curve_qi1j8")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4ejbm"]
angle_min = -720.0
angle_max = 720.0
direction = Vector3(0, 1, 0)
spread = 90.0
initial_velocity_min = 0.2
initial_velocity_max = 0.4
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_45o4p")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lrdxv"]
albedo_color = Color(5, 5, 0, 1)
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_gaalf"]
material = SubResource("StandardMaterial3D_lrdxv")
size = Vector2(0.01, 0.01)

[sub_resource type="SphereShape3D" id="SphereShape3D_wyweb"]
radius = 0.03

[sub_resource type="BoxMesh" id="BoxMesh_y4g7i"]
flip_faces = true
size = Vector3(0.062, 0.062, 0.062)

[node name="Cauldron" type="Node3D"]
script = ExtResource("1_4rxum")
default_fluid_height = 0.022
empty_fluid_height = -0.14
jiggle_height = -0.013

[node name="Model" parent="." instance=ExtResource("1_vhr3y")]

[node name="Pot" parent="Model" index="0"]
layers = 129

[node name="Pot Collision" type="StaticBody3D" parent="Model/Pot" index="0"]
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Model/Pot/Pot Collision"]
shape = SubResource("ConcavePolygonShape3D_gr0cy")

[node name="Cube" parent="Model/Pot" index="1"]
layers = 129

[node name="Earrings" parent="Model/Pot" index="2"]
layers = 129

[node name="Water" parent="Model" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.14, 0)
surface_material_override/0 = SubResource("ShaderMaterial_p5c1o")

[node name="LeverStick" parent="Model" index="5"]
transform = Transform3D(1.28363, 0, 0, 0, 0.717797, 1.06418, 0, -1.06418, 0.717797, 0.180354, 0.270834, 0)

[node name="Grab Origin" type="Node3D" parent="Model/LeverStick" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, -5.96046e-08, 0, 5.96046e-08, 1, 0, 0.0872133, 0)

[node name="Log" parent="Model" instance=ExtResource("5_encwd")]
transform = Transform3D(0.8, -9.28038e-09, -1.25393e-09, 9.28038e-09, 0.771313, 0.21231, -1.25393e-09, -0.21231, 0.771313, -0.0147545, -0.00437488, 0.0504822)

[node name="Cube_003" parent="Model/Log" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_y2s61")

[node name="Log2" parent="Model" instance=ExtResource("5_encwd")]
transform = Transform3D(-0.69282, 0.106155, -0.385657, 9.28038e-09, 0.771313, 0.21231, 0.4, 0.183866, -0.667977, -0.0147545, -0.00437488, -0.0514864)

[node name="Cube_003" parent="Model/Log2" index="0"]
transform = Transform3D(0.0473019, 0.0134546, -0.0683293, -0.00336366, 0.195412, 0.00238736, 0.01222, 0.00170783, 0.26515, 0, 0, 0)
surface_material_override/0 = SubResource("StandardMaterial3D_y2s61")

[node name="Log3" parent="Model" instance=ExtResource("5_encwd")]
transform = Transform3D(-0.219825, -0.204138, 0.741623, 3.31991e-09, 0.771313, 0.21231, -0.769205, 0.058339, -0.211943, 0.0571414, -0.00630608, 0.0148769)

[node name="Cube_003" parent="Model/Log3" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_y2s61")

[node name="Log4" parent="Model" instance=ExtResource("5_encwd")]
transform = Transform3D(-0.287701, 0.0512452, -0.744716, -0.120105, 0.784537, 0.100385, 0.736752, 0.147906, -0.274446, -0.0461599, -0.00544318, 0.00390205)

[node name="Cube_003" parent="Model/Log4" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_y2s61")

[node name="PotionDropArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 67584

[node name="CollisionShape" type="CollisionShape3D" parent="PotionDropArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00123596, 0.239109, 0)
shape = SubResource("CylinderShape3D_hyasg")

[node name="Mixture" type="Label3D" parent="."]
transform = Transform3D(-1.74846e-08, 0.0899804, -0.389748, 0, 0.389748, 0.0899804, 0.4, 3.93317e-09, -1.70364e-08, -0.170219, 0.175604, 5.17309e-09)
font_size = 34

[node name="FireCombiner" type="Node3D" parent="."]
script = ExtResource("7_6rd3o")

[node name="Flames" type="GPUParticles3D" parent="FireCombiner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0255464, 0)
amount = 64
lifetime = 3.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_4upeb")
draw_pass_1 = SubResource("QuadMesh_0idgw")

[node name="Parts1" type="GPUParticles3D" parent="FireCombiner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0588994, 0.00312087, -0.0308267)
layers = 2
lifetime = 3.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_5uriq")
draw_pass_1 = SubResource("QuadMesh_j6bkw")

[node name="Parts2" type="GPUParticles3D" parent="FireCombiner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0563633, 0.02666, 0.030563)
layers = 2
lifetime = 3.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_5uriq")
draw_pass_1 = SubResource("QuadMesh_j6bkw")

[node name="Parts3" type="GPUParticles3D" parent="FireCombiner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0216846, 0.00381159, -0.0405158)
layers = 2
lifetime = 3.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_5uriq")
draw_pass_1 = SubResource("QuadMesh_j6bkw")

[node name="LeverPulledCombiner" type="Node3D" parent="."]
script = ExtResource("7_6rd3o")
start_on_ready = false

[node name="Sparks" type="GPUParticles3D" parent="LeverPulledCombiner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.180093, 0.285235, 0.0295049)
emitting = false
lifetime = 0.75
one_shot = true
explosiveness = 1.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_4ejbm")
draw_pass_1 = SubResource("QuadMesh_gaalf")

[node name="Lever" type="Node3D" parent="."]
script = ExtResource("9_8d6wc")

[node name="Grab Pickable" type="RigidBody3D" parent="Lever"]
transform = Transform3D(1, 0, 0, 0, 0.559193, 0.829037, 0, -0.829037, 0.559193, 0.180354, 0.333435, -0.0928104)
collision_layer = 4
collision_mask = 196615
freeze = true
freeze_mode = 1
script = ExtResource("10_f8ijn")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Lever/Grab Pickable"]
shape = SubResource("SphereShape3D_wyweb")

[node name="XRToolsHighlightVisible" type="Node3D" parent="Lever/Grab Pickable"]
visible = false
script = ExtResource("11_d68hx")

[node name="Highlight" type="MeshInstance3D" parent="Lever/Grab Pickable/XRToolsHighlightVisible"]
mesh = SubResource("BoxMesh_y4g7i")
surface_material_override/0 = ExtResource("12_0hfjq")

[node name="FlaskSpawner" parent="." instance=ExtResource("13_4jxc5")]
transform = Transform3D(0.263168, 0.320986, -0.909786, -0.289685, 0.925803, 0.242842, 0.920231, 0.199643, 0.336627, -0.094266, 0.228341, -0.155727)

[connection signal="body_entered" from="PotionDropArea" to="." method="_on_potion_drop_area_body_entered"]
[connection signal="pulled" from="Lever" to="." method="_on_empty_cauldron_button_button_pressed"]
[connection signal="dropped" from="Lever/Grab Pickable" to="Lever" method="_on_grip_pickable_dropped"]
[connection signal="picked_up" from="Lever/Grab Pickable" to="Lever" method="_on_grip_pickable_picked_up"]

[editable path="Model"]
[editable path="Model/Log"]
[editable path="Model/Log2"]
[editable path="Model/Log3"]
[editable path="Model/Log4"]
